# ukrfans-discord

./: .editorconfig  .env.example  .flake8  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
schema/: 000001_ukrfans.down.sql  000001_ukrfans.up.sql
ukrfans/: __init__.py  __main__.py  bot.py  config.py  errors.py  param.py
ukrfans/core/: bot.py  logger.py
ukrfans/database/: events.py
ukrfans/events/: error.py  message.py
ukrfans/modules/: information.py  moderation.py  social_rating.py  utility.py
ukrfans/repository/: social_rating.py
ukrfans/service/: social_rating.py
